# www

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix
.github/workflows/: ci.yml
assets/: bg.js  style.css
content/: index.md
site/: index.html
src/: http.rs  main.rs  repos.rs  shell.rs  site.rs  ssh.rs  sync.rs  theme.rs  vfs.rs
templates/: index.html
